www/renderers.css
/* ... */
table.stats-values tr.section td {
  text-align: center;
  font-weight: 600;
  font-size: 14px;
}

table.stats-values tr.section:not(:first-child) td {
  border-top: 1px solid #555;
}

@media (prefers-color-scheme: dark) {
  table.stats-values {
    border: 1px solid #999;
  }

  table.stats-values td {
    border: 1px solid #333;
  }

  table.stats-values tr.section td {
    border-top: 1px solid #999;
  }
}

table.stats-values tr.values td:first-child {
  text-align: right;
  font-size: 12px;
  width: 100px;
}

table.stats-values tr.values td:not(:first-child) {
  user-select: text;
  font-family: Courier, monospace;
  font-size: 14px;
}

div.stats-histogram-container {
  position: absolute;
  right: 10px;
  top: 0px;
  bottom: 10px;
  overflow: hidden;
}

/* Video */

div.video-container {
  position: absolute;
  top: 0%;
  height: 100%;
  left: 0%;
  width: 100%;
  overflow: hidden;
}

div.video-container img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

/* Joysticks */

canvas.joysticks-canvas {
  position: absolute;
  left: 0%;
  top: 0%;
  width: 100%;
  height: 100%;
}

/* Swerve */

div.swerve-canvas-container {
  position: absolute;
  bottom: 0%;
  height: calc(100% + 10px);
  left: 0px;
  width: 100%;
}

body.satellite div.swerve-canvas-container {
  height: 100%;
}

canvas.swerve-canvas {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  background-color: #f4f4f4;
  border: 1px solid #555;
}

@media (prefers-color-scheme: dark) {
  canvas.swerve-canvas {
    background-color: #292929;
    border: 1px solid #999;
  }
}

/* Mechanism */

div.mechanism-svg-container {
  position: absolute;
  left: 0%;
  bottom: 0%;
  width: 100%;
  height: calc(100% + 10px);
}

body.satellite div.mechanism-svg-container {
  height: 100%;
}

svg.mechanism-svg {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

/* Points */

div.points-background-container {
  position: absolute;
  bottom: 0%;
  height: calc(100% + 10px);
  left: 0px;
  width: 100%;
}

body.satellite div.points-background-container {
  height: 100%;
}

div.points-background {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  background-color: #f4f4f4;
  border: 1px solid #555;
}

@media (prefers-color-scheme: dark) {
  div.points-background {
    background-color: #292929;
    border: 1px solid #999;
  }
}

div.points-background svg {
  position: absolute;
  stroke-width: 5px;
}

/* Metadata */

div.metadata-table-container {
  height: 100%;
  width: 100%;
  overflow: auto;
}

table.metadata-table {
  width: 100%;
  table-layout: fixed;
  text-align: left;
  word-wrap: break-word;
  border-collapse: separate;
  border-spacing: 0;
}

table.metadata-table th:first-child {
  width: 150px;
}

table.metadata-table th {
  padding: 6px;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #222;
  background-color: #fff;
}

table.metadata-table td:first-child {
  padding: 6px;
  text-align: right;
  font-weight: bold;
  border-right: 1px solid #222;
}

table.metadata-table td:not(:first-child) {
  padding: 6px;
  font-family: Courier, monospace;
  font-size: 14px;
  user-select: text;
}

table.metadata-table td.no-data {
  font-style: italic;
}

@media (prefers-color-scheme: dark) {
  table.metadata-table th {
    border-bottom: 1px solid #eee;
    background-color: #222;
  }

  table.metadata-table td:first-child {
    border-right: 1px solid #eee;
  }
}

/* Soccer widgets */
div.soccer-field-canvas-container,
div.passes-net-canvas-container,
div.action-heatmap-canvas-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

canvas.soccer-field-canvas,
canvas.passes-net-canvas,
canvas.action-heatmap-canvas {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

div.event-timeline-canvas-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

canvas.event-timeline-canvas {
  position: absolute;
  top: 0;
  left: 0;
}

